this is the new Toggle project i am working on

--- a/index.html
+++ b/index.html
@@ -9,6 +9,31 @@
 
 
 <body>
+
+ <div id ='menu-button'>
+  <i class="fa fa-bars" aria-hidden="true"></i>
+  </div>
+   <nav id='menuBox'>
+	   
+		<ul>
+			<li>
+			<div class="selected">
+				<a href="index.html">Home</a>
+				</div>
+			</li>
+			<li>
+				<a href="about/index.html">About</a>
+			</li>
+			<li>
+				<a href="projects/index.html">Projects</a>
+			</li>
+			<li>
+			<a href="contact/index.html">Contact</a>
+			</li>
+		</ul>
+		
+	</nav>
+
 	<div id="left"></div>
 	<div id="right"></div>
 	<div id="top"></div>
@@ -25,6 +50,33 @@
 			
 		</p>
 	</div>
+	<script>
+	/* 
+    EXERCISE 1:
+    show or hide the menu when the burger menu button is clicked
+*/
+
+// get a reference to the burger button
+var menuButton = document.getElementById('menu-button');
+
+// get a reference to the box containing the menu to be shown / hidden
+var menuBox = document.getElementById('menuBox');
+
+/*
+    WHERE THE MAGIC HAPPENS:
+    this function shall be executed every time the burger button has been pressed
+*/
+var burgerMenuShowHide = function(event) {
+    if (menuBox.style.display == 'block') { // if the menu box is set to "display:block":
+        menuBox.style.display = 'none';     // change it to "none"
+    } else {                                // otherwise:
+        menuBox.style.display = 'block';    // change it to "block"
+    }
+};
+
+// attach the "onClick" function to the "click" event of the burger button
+menuButton.addEventListener('click', burgerMenuShowHide);
+</script>
 </body>
 
 </html>
